--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 MiniTestTraining/
 untitled/
+
+TPs/hero/.idea/workspace.xml
+TPs/hero/.idea/
+TPs/hero/.gradle/
+TPs/hero/out/
+TPs/hero/build/
+TPs/hero/*.iml
